--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @car %> |
-<%= link_to 'Back', cars_path %>
+<%= link_to 'Show', [@car.user, @car] %> |
+<%= link_to 'Back', user_cars_path %>
