--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -12,16 +12,17 @@
 
 <% @cars.each do |car| %>
   <tr>
-    <td><%= car.user %></td>
+    <td><%= car.user.email %></td>
     <td><%= car.license_plate %></td>
     <td><%= car.car_description %></td>
-    <td><%= link_to 'Show', car %></td>
-    <td><%= link_to 'Edit', edit_car_path(car) %></td>
-    <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= image_tag car.car_image.url(:thumb) %></td>
+    <td><%= link_to 'Show', [car.user, car] %></td>
+    <td><%= link_to 'Edit', edit_user_car_path(car.user,car) %></td>
+    <td><%= link_to 'Destroy', [car.user, car], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Car', new_car_path %>
+<%= link_to 'New Car', new_user_car_path %>
