--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@car.user, @car]) do |f| %>
+<%= form_for [@car.user, @car], :html => { :multipart => true } do |f| %>
   <% if @car.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@car.errors.count, "error") %> prohibited this car from being saved:</h2>
