Added Bootstrap css and few files... mostly wasted time learning RoR

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
   <head>
     <title>ParknpayServer</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
-    <link href="bootstrap-assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="bootstrap-assets/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <%= stylesheet_link_tag    "bootstrap.min.css", :media => "all" %>
+    <%= stylesheet_link_tag    "bootstrap-responsive.min.css", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
