--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -33,6 +33,13 @@
                 <li><a href="#">One more separated link</a></li>
               </ul>
             </li>
+            <li>
+              <% if user_signed_in? %>
+                  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+              <% else %>
+                  <%= link_to 'Login', new_user_session_path %>
+              <% end %>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!-- /.navbar-inner -->
