--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,16 @@
 <html>
   <head>
     <title>ParknpayServer</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <!--  <script src="../assets/js/html5shiv.js"></script> -->
+    <![endif]-->
+
     <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= stylesheet_link_tag    "bootstrap.min.css", :media => "all" %>
-    <%= stylesheet_link_tag    "bootstrap-responsive.min.css", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
