--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,58 @@
-<h2>Sign up</h2>
+<div class="container">
+  <h2>Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name),:html => {:class => "form-horizontal"}) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+    <div class="control-group">
+      <%= f.label :"First name" ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.text_field :firstname , :placeholder=>"First name"%>
+      </div>
+    </div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+    <div class="control-group">
+      <%= f.label :"Last name" ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.text_field :lastname , :placeholder=>"Last name" %>
+      </div>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="control-group">
+      <%= f.label :"Street address" ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.text_field :address_st , :placeholder=>"Street address" %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :email ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.email_field :email, :placeholder=>"Email", :autofocus => true %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :password ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.password_field :password , :placeholder=>"Password"%>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :password_confirmation ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.password_field :password_confirmation , :placeholder=>"Password Confirmation"%>
+      </div>
+    </div>
+
+
+
+
+    <div><%= f.submit "Sign up" %></div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+</div>
