--- a/app/views/u_dashboard/index.html.erb
+++ b/app/views/u_dashboard/index.html.erb
@@ -3,10 +3,86 @@
 
 <div class="container">
 
-  <ul class="nav nav-tabs">
-    <li class="active"><a href="#">Personal</a></li>
-    <li><a href="#">Cars</a></li>
-    <li><a href="#">Payment</a></li>
-    <li><a href="#">History</a></li>
+
+
+  <ul class="nav nav-tabs" id="myTab">
+    <li class="active"><a href="#Personal">Personal</a></li>
+    <li><a href="#Cars">Cars</a></li>
+    <li><a href="#Payment">Payment</a></li>
+    <li><a href="#History">History</a></li>
   </ul>
+
+  <div class="tab-content">
+    <div class="tab-pane active" id="Personal">
+      <h2>Personal information</h2>
+    
+ 
+
+  <%= form_for(@user,:url => { :action => "update" } ,:html => {:class => "form-horizontal"}) do |f| %>
+
+    <div class="control-group">
+      <%= f.label :"First name" ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.text_field :firstname , :placeholder=>"First name"%>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :"Last name" ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.text_field :lastname , :placeholder=>"Last name" %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :"Street address" ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.text_field :address_st , :placeholder=>"Street address" %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :email ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.email_field :email, :placeholder=>"Email", :autofocus => true %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :password ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.password_field :password , :placeholder=>"Password"%>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :password_confirmation ,:class=>"control-label" %>
+      <div class="controls">
+        <%= f.password_field :password_confirmation , :placeholder=>"Password Confirmation"%>
+      </div>
+    </div>
+
+
+
+
+    <div><%= f.submit "Update" %></div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+    
+    
+    </div>
+    <div class="tab-pane" id="Cars">List of cars</div>
+    <div class="tab-pane" id="Payment">Credit card information</div>
+    <div class="tab-pane" id="History">payment history</div>
+  </div>
+  <script src="/bootstrap-assets/js/bootstrap-tab.js"></script>
+
+  <script>
+    $('#myTab a').click(function(e) {
+      e.preventDefault();
+      $(this).tab('show');
+    })
+  </script>
+
 </div>
