--- a/app/views/u_dashboard/index.html.erb
+++ b/app/views/u_dashboard/index.html.erb
@@ -18,7 +18,7 @@
     
  
 
-  <%= form_for(@user,:url => { :action => "update" } ,:html => {:class => "form-horizontal"}) do |f| %>
+  <%= form_for(@user,:url => { :action => "update_personal_details" } ,:html => {:class => "form-horizontal"}) do |f| %>
 
     <div class="control-group">
       <%= f.label :"First name" ,:class=>"control-label" %>
