fixed broken links in u_dashboard

--- a/app/views/u_dashboard/index.html.erb
+++ b/app/views/u_dashboard/index.html.erb
@@ -68,7 +68,7 @@
     <div><%= f.submit "Update" %></div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <%= render "links" %>
     
     
     </div>
