--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,10 @@
-<%= render "/layouts/navigation" %>
 
 <!-- Carousel
     ================================================== -->
 <div id="myCarousel" class="carousel slide">
   <div class="carousel-inner">
     <div class="item active">
-      <img src="/bootstrap-assets/img/examples/slide-02.jpg" alt="">
+      <img src="img/examples/slide-02.jpg" alt="">
       <div class="container">
         <div class="carousel-caption">
           <h1>Example headline.</h1>
@@ -15,7 +14,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="/bootstrap-assets/img/examples/slide-02.jpg" alt="">
+      <img src="img/examples/slide-02.jpg" alt="">
       <div class="container">
         <div class="carousel-caption">
           <h1>Another example headline.</h1>
@@ -25,7 +24,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="/bootstrap-assets/img/examples/slide-02.jpg" alt="">
+      <img src="img/examples/slide-02.jpg" alt="">
       <div class="container">
         <div class="carousel-caption">
           <h1>One more for good measure.</h1>
@@ -75,7 +74,7 @@
   <hr class="featurette-divider">
 
   <div class="featurette">
-    <img class="featurette-image pull-right" src="/bootstrap-assets/img/examples/browser-icon-chrome.png">
+    <img class="featurette-image pull-right" src="img/examples/browser-icon-chrome.png">
     <h2 class="featurette-heading">First featurette headling. <span class="muted">It'll blow your mind.</span></h2>
     <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
   </div>
@@ -83,7 +82,7 @@
   <hr class="featurette-divider">
 
   <div class="featurette">
-    <img class="featurette-image pull-left" src="/bootstrap-assets/img/examples/browser-icon-firefox.png">
+    <img class="featurette-image pull-left" src="img/examples/browser-icon-firefox.png">
     <h2 class="featurette-heading">Oh yeah, it's that good. <span class="muted">See for yourself.</span></h2>
     <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
   </div>
@@ -91,7 +90,7 @@
   <hr class="featurette-divider">
 
   <div class="featurette">
-    <img class="featurette-image pull-right" src="/bootstrap-assets/img/examples/browser-icon-safari.png">
+    <img class="featurette-image pull-right" src="img/examples/browser-icon-safari.png">
     <h2 class="featurette-heading">And lastly, this one. <span class="muted">Checkmate.</span></h2>
     <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
   </div>
@@ -109,23 +108,6 @@
 
 </div><!-- /.container -->
 
-
-
-<!-- Le javascript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="/bootstrap-assets/js/jquery.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-transition.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-alert.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-modal.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-dropdown.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-scrollspy.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-tooltip.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-popover.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-button.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-collapse.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-carousel.js"></script>
-<script src="/bootstrap-assets/js/bootstrap-typeahead.js"></script>
 <script>
   !function($) {
     $(function() {
@@ -134,4 +116,3 @@
     })
   }(window.jQuery)
 </script>
-<script src="bootstrap-assets/js/holder/holder.js"></script>
