--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,52 +4,54 @@
   <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
   <div class="container">
 
-    <div class="navbar navbar-inverse">
+    <div class="navbar navbar-inverse nav">
       <div class="navbar-inner">
-        <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
-        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="brand" href="#">INIGO - Park'N PAY</a>
-        <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
-        <div class="nav-collapse collapse">
-          <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="nav-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">INIGO - Park'N PAY</a>
+
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="divider-vertical"></li>
+              <li><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
+              <li><a href="/about">About</a></li>
+              <li><%= link_to 'Contact', "/contact" %></li>
+              <% if user_signed_in? %>
+              <li><%= link_to "Dashboard", :controller => :u_dashboard, :action => :index %></li>
+               <% end %> 
+            </ul>
+            <div class="pull-right">
+              <ul class="nav pull-right">
+                <% if user_signed_in? %>
+                  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome, <%= User.find(current_user.id).firstname %><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="/user/preferences"><i class="icon-cog"></i> Preferences</a></li>
+                      <li><a href="/help/support"><i class="icon-envelope"></i> Contact Support</a></li>
+                      <li class="divider"></li>
+                      <li><a href="/users/sign_out" data-method="delete" rel="nofollow"><i class="icon-off"></i> Logout</a></li>
+                    </ul>
+                  </li>
+                <% else %>
+                  <li>
+                    <%= link_to 'Login', new_user_session_path %>
+                  </li>
+                <% end %>
+                <li>
+                  <% if !user_signed_in? %>
+
+                    <%= link_to('Register', new_user_registration_path)  %>
+                  <% end %>
+                </li>
               </ul>
-            </li>
-            <li>
-              <% if user_signed_in? %>
-                <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
-              <% else %>
-                <%= link_to 'Login', new_user_session_path %>
-              <% end %>
-            </li>
-            <li>
-              <% if user_signed_in? %>
-                  <%= link_to('Dashboard', edit_user_registration_path) %>
-              <% else %>
-                <%= link_to('Register', new_user_registration_path)  %>
-              <% end %>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div><!-- /.navbar-inner -->
-    </div><!-- /.navbar -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div> <!-- /.container -->
 </div><!-- /.navbar-wrapper -->
 
