--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-    
+
   </head>
   <body>
-      <%= yield %>
+    <%= render "/layouts/navigation" %>
+    <%= yield %>
+    <%= render "/layouts/footer" %>
   </body>
 </html>
