--- a/app/views/u_dashboard/index.html.erb
+++ b/app/views/u_dashboard/index.html.erb
@@ -10,61 +10,66 @@
   <div class="tab-content">
     <div class="tab-pane active" id="Personal">
       <h2>Personal information</h2>
+      <%= form_for(@user,:url => { :action => "update" } ,:html => {:multipart => true,:class => "form-horizontal"}) do |f| %>
 
+        <div class="row-fluid">
+          <div class="span12">
+            <div class="span6">
+              <div class="control-group">
+                <%= f.label :"First name" ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.text_field :firstname , :placeholder=>"First name"%>
+                </div>
+              </div>
 
+              <div class="control-group">
+                <%= f.label :"Last name" ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.text_field :lastname , :placeholder=>"Last name" %>
+                </div>
+              </div>
 
-      <%= form_for(@user,:url => { :action => "update" } ,:html => {:class => "form-horizontal"}) do |f| %>
+              <div class="control-group">
+                <%= f.label :"Street address" ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.text_field :address_st , :placeholder=>"Street address" %>
+                </div>
+              </div>
 
-        <div class="control-group">
-          <%= f.label :"First name" ,:class=>"control-label" %>
-          <div class="controls">
-            <%= f.text_field :firstname , :placeholder=>"First name"%>
+              <div class="control-group">
+                <%= f.label :email ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.email_field :email, :placeholder=>"Email", :autofocus => true %>
+                </div>
+              </div>
+
+              <div class="control-group">
+                <%= f.label :password ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.password_field :password , :placeholder=>"Password"%>
+                </div>
+              </div>
+
+              <div class="control-group">
+                <%= f.label :password_confirmation ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.password_field :password_confirmation , :placeholder=>"Password Confirmation"%>
+                </div>
+              </div>
+
+            </div>
+            <div class="span6">
+              <img src=<%= %>  class="img-polaroid">
+              <div class="control-group">
+                <div class="controls">
+                  <%= image_tag @user.avatar.url() %>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-
-        <div class="control-group">
-          <%= f.label :"Last name" ,:class=>"control-label" %>
-          <div class="controls">
-            <%= f.text_field :lastname , :placeholder=>"Last name" %>
-          </div>
-        </div>
-
-        <div class="control-group">
-          <%= f.label :"Street address" ,:class=>"control-label" %>
-          <div class="controls">
-            <%= f.text_field :address_st , :placeholder=>"Street address" %>
-          </div>
-        </div>
-
-        <div class="control-group">
-          <%= f.label :email ,:class=>"control-label" %>
-          <div class="controls">
-            <%= f.email_field :email, :placeholder=>"Email", :autofocus => true %>
-          </div>
-        </div>
-
-        <div class="control-group">
-          <%= f.label :password ,:class=>"control-label" %>
-          <div class="controls">
-            <%= f.password_field :password , :placeholder=>"Password"%>
-          </div>
-        </div>
-
-        <div class="control-group">
-          <%= f.label :password_confirmation ,:class=>"control-label" %>
-          <div class="controls">
-            <%= f.password_field :password_confirmation , :placeholder=>"Password Confirmation"%>
-          </div>
-        </div>
-
-
-
-
-        <div><%= f.submit "Update" %></div>
-      <% end %>
-
-
-
+          <div><%= f.submit "Update" %></div>
+        <% end %>
+      </div>
     </div>
     <div class="tab-pane" id="Cars">
       <h2>List of cars</h2>
@@ -153,9 +158,7 @@
             </div>
           </div>
         </li>
-
       </ul>
-
     </div>
     <div class="tab-pane" id="Payment">
       <form class="form-horizontal span6">
@@ -233,49 +236,51 @@
       </form>
 
     </div>
-    <div class="tab-pane" id="History">payment history</div>
+    <div class="tab-pane" id="History">
+      payment history
+    </div>
     <div class="tab-pane" id="messages">
       <table class="table table-condensed table-hover">
-  <thead>
-    <tr>
-      <th class="span1"><input type="checkbox"></th>
-      <th class="span2"></th>
-      <th class="span2"></th>
-      <th class="span9"></th>
-      <th class="span2"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><input type="checkbox"> <a href="#"><i class="icon-star-empty"></i></a></td>
-      <td><strong>John Doe</strong></td>
-      <td><span class="label pull-right">Notifications</span></td>
-      <td><strong>Message body goes here</strong></td>
-      <td><strong>11:23 PM</strong></td>
-    </tr>
-    <tr>
-      <td><input type="checkbox"> <a href="#"><i class="icon-star-empty"></i></a></td>
-      <td>John Doe</td>
-      <td><span class="label pull-right">Notifications</span></td>
-      <td>Message body goes here</td>
-      <td>Sept4</td>
-    </tr>
-    <tr>
-      <td><input type="checkbox"> <a href="#"><i class="icon-star"></i></a></td>
-      <td><strong>John Doe</strong></td>
-      <td><span class="label pull-right">Notifications</span></td>
-      <td><strong>Message body goes here</strong></td>
-      <td><strong>Sept3</strong></td>
-    </tr>
-    <tr>
-      <td><input type="checkbox"> <a href="#"><i class="icon-star"></i></a></td>
-      <td><strong>John Doe</strong></td>
-      <td><span class="label pull-right">Notifications</span></td>
-      <td><strong>Message body goes here</strong></td>
-      <td><strong>Sept3</strong></td>
-    </tr>
-  </tbody>
-</table>
+        <thead>
+          <tr>
+            <th class="span1"><input type="checkbox"></th>
+            <th class="span2"></th>
+            <th class="span2"></th>
+            <th class="span9"></th>
+            <th class="span2"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><input type="checkbox"> <a href="#"><i class="icon-star-empty"></i></a></td>
+            <td><strong>John Doe</strong></td>
+            <td><span class="label pull-right">Notifications</span></td>
+            <td><strong>Message body goes here</strong></td>
+            <td><strong>11:23 PM</strong></td>
+          </tr>
+          <tr>
+            <td><input type="checkbox"> <a href="#"><i class="icon-star-empty"></i></a></td>
+            <td>John Doe</td>
+            <td><span class="label pull-right">Notifications</span></td>
+            <td>Message body goes here</td>
+            <td>Sept4</td>
+          </tr>
+          <tr>
+            <td><input type="checkbox"> <a href="#"><i class="icon-star"></i></a></td>
+            <td><strong>John Doe</strong></td>
+            <td><span class="label pull-right">Notifications</span></td>
+            <td><strong>Message body goes here</strong></td>
+            <td><strong>Sept3</strong></td>
+          </tr>
+          <tr>
+            <td><input type="checkbox"> <a href="#"><i class="icon-star"></i></a></td>
+            <td><strong>John Doe</strong></td>
+            <td><span class="label pull-right">Notifications</span></td>
+            <td><strong>Message body goes here</strong></td>
+            <td><strong>Sept3</strong></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
   <script src="/bootstrap-assets/js/bootstrap-tab.js"></script>
