Uploading and managing users photo

--- a/app/views/u_dashboard/index.html.erb
+++ b/app/views/u_dashboard/index.html.erb
@@ -61,7 +61,7 @@
             <div class="span6">
               <div class="control-group">
                 <div class="controls">
-                  <%= image_tag @user.avatar.url() %>
+                  <%= image_tag @user.avatar.url(:thumb) %>
                 </div>
               </div>
             </div>
