Uploading and managing users photo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -112,7 +112,7 @@
   !function($) {
     $(function() {
       // carousel demo
-      $('#myCarousel').carousel()
-    })
-  }(window.jQuery)
+      $('#myCarousel').carousel();
+    });
+  }(window.jQuery);
 </script>
