--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   </head>
   <body>
     <%= render "/layouts/navigation" %>
+<!--    <p class="notice"><%= notice %></p> -->
+<!--    <p class="alert"><%= alert %></p> -->
     <%= yield %>
     <%= render "/layouts/footer" %>
   </body>
