--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,45 +1,77 @@
 <div class="container" style="padding-top: 80px;">
-  <h2>Sign up</h2>
+  <div class="container">
+    <div class="row-fluid">
+      <div class="span12">
+        <div class="span6 offset3">
+          <div class="area well">
 
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
+            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name),:html => {:class => "form-horizontal "}) do |f| %>
+              <%= devise_error_messages! %>
+              <div class="heading">
+                <h4 class="form-heading">Sign Up</h4>
+              </div>
+              <div class="control-group">
+                <%= f.label :email ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.email_field :email, :autofocus => true %>
+                </div>
+              </div>
 
-    <div class="control-group"><%= f.label :email %><br />
-      <%= f.email_field :email, :autofocus => true %></div>
+              <div class="control-group">
+                <%= f.label :password ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.password_field :password %>
+                </div>
+              </div>
 
-    <div class="control-group"><%= f.label :password %><br />
-      <%= f.password_field :password %></div>
+              <div class="control-group">
+                <%= f.label :password_confirmation ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.password_field :password_confirmation %>
+                </div>
+              </div>
 
-    <div class="control-group"><%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %></div>
+              <div class="control-group">
+                <%= f.label :"First name" ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.text_field :firstname , :placeholder=>"First name"%>
+                </div>
+              </div>
 
-    <div class="control-group">
-      <%= f.label :"First name" ,:class=>"control-label" %>
-      <div class="controls">
-        <%= f.text_field :firstname , :placeholder=>"First name"%>
+              <div class="control-group">
+                <%= f.label :"Last name" ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.text_field :lastname , :placeholder=>"Last name" %>
+                </div>
+              </div>
+
+              <div class="control-group">
+                <%= f.label :"Street address" ,:class=>"control-label" %>
+                <div class="controls">
+                  <%= f.text_field :address_st , :placeholder=>"Street address" %>
+                </div>
+              </div>
+              <div class="control-group">
+                <div class="controls">
+                  <label class="checkbox">
+                    <input type="checkbox"> I agree all your <a href="#">Terms of Services</a>
+                  </label>
+                  <%= f.submit "Sign up" ,:class=>"btn btn-success"%>
+                  <button type="button" class="btn">Help</button>
+                </div>
+              </div>	
+              <div class="alert alert-info">
+                <button type="button" class="close" data-dismiss="alert">×</button>
+                <strong>Confirmation: </strong> A confirmation email has been sent to your email.<br>
+                Thank you for your registration.
+              </div>
+
+            <% end %>
+            <%= render "/users/shared/links" %>
+            <%= link_to "Back", :back %>
+          </div>                          
+        </div>
       </div>
     </div>
-
-    <div class="control-group">
-      <%= f.label :"Last name" ,:class=>"control-label" %>
-      <div class="controls">
-        <%= f.text_field :lastname , :placeholder=>"Last name" %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <%= f.label :"Street address" ,:class=>"control-label" %>
-      <div class="controls">
-        <%= f.text_field :address_st , :placeholder=>"Street address" %>
-      </div>
-    </div>
-
-    <div><%= f.submit "Sign up" %></div>
-  <% end %>
-
-  <%= render "/users/shared/links" %>
-  <%= link_to "Back", :back %>
-
+  </div>
 </div>
-
-
