--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -35,6 +35,9 @@
                       <li><a href="/users/sign_out" data-method="delete" rel="nofollow"><i class="icon-off"></i> Logout</a></li>
                     </ul>
                   </li>
+                  <li>
+                    <%= link_to image_tag(@user.avatar.url(:thumb),:class=>"img-rounded "), {:action => 'index', :controller => 'u_dashboard',:anchor => "Personal"}, {:style => 'padding: 0px;'} %>
+                  </li>
                 <% else %>
                   <li>
                     <%= link_to 'Login', new_user_session_path %>
@@ -42,7 +45,6 @@
                 <% end %>
                 <li>
                   <% if !user_signed_in? %>
-
                     <%= link_to('Register', new_user_registration_path)  %>
                   <% end %>
                 </li>
@@ -55,3 +57,12 @@
   </div> <!-- /.container -->
 </div><!-- /.navbar-wrapper -->
 
+<script>
+  $(document).ready(function() {
+    if (location.hash !== '') $('a[href="' + location.hash + '"]').tab('show');
+    return $('a[data-toggle="tab"]').on('shown', function(e) {
+      return location.hash = $(e.target).attr('href').substr(1);
+    });
+});
+  
+</script>
