--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "holder" %>
     <%= csrf_meta_tags %>
 
   </head>
@@ -17,5 +18,6 @@
 <!--    <p class="alert"><%= alert %></p> -->
     <%= yield %>
     <%= render "/layouts/footer" %>
+    
   </body>
 </html>
