--- a/app/views/u_dashboard/index.html.erb
+++ b/app/views/u_dashboard/index.html.erb
@@ -13,10 +13,7 @@
     <div class="tab-pane active" id="General">
       <div class="row-fluid">
         <div class="span12">
-          <div class="span3">
-            <%= image_tag @user.avatar.url,:class=>"img-polaroid"  %>
-          </div>
-          <div class="span9"></div>
+            <div id="map_canvas" style="width:100%;height:350px;"></div>
         </div>
       </div>
     </div>
@@ -31,15 +28,6 @@
 <% end %>
 <div class="row-fluid">
           <div class="span12">
-            <div class="span3">
-              <div>
-                <%= image_tag @user.avatar.url(:thumb),:class=>"img-polaroid"  %>
-              </div>
-              <div>
-                <%= f.file_field :avatar %>
-              </div>
-            </div>
-
             <div class="span9">
               <div class="control-group">
                 <%= f.label :"First name" ,:class=>"control-label" %>
@@ -63,9 +51,16 @@
               </div>
 
               <div class="control-group">
-                <%= f.label :email ,:class=>"control-label" %>
+                <%= f.label :email ,:class=>"control-label"%>
                 <div class="controls">
                   <%= f.email_field :email, :placeholder=>"Email", :autofocus => true %>
+                </div>
+              </div>
+              
+              <div class="control-group">
+                <%= f.label :"Profile picture" ,:class=>"control-label" %><%= image_tag @user.avatar.url(:thumb),:class=>"img-rounded"  %>
+                <div class="controls">
+                  <%= f.file_field :avatar %>
                 </div>
               </div>
 
@@ -315,33 +310,31 @@
 
 
 <%= stylesheet_link_tag    "jQueryFileUpload/jquery.fileupload-ui.css", :media => "all" %>
-<%= javascript_include_tag "jQueryFileUpload/jquery.ui.widget.js" %>
-<%= javascript_include_tag "jQueryFileUpload/jquery.iframe-transport.js" %>
-<%= javascript_include_tag "jQueryFileUpload/jquery.fileupload.js" %>
+<%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyC6mNDw1ovtoHdf2EhOysA7drYS5JT5QCw&sensor=false" %>
+<%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyC6mNDw1ovtoHdf2EhOysA7drYS5JT5QCw&sensor=false" %>
 
 <script>
-  /*jslint unparam: true */
-  /*global window, $ */
-  $(function() {
-    'use strict';
-    // Change this to the location of your server-side upload handler:
-    var url = 'server/php/';
-    $('#fileupload').fileupload({
-      url: url,
-      dataType: 'json',
-      done: function(e, data) {
-        $.each(data.result.files, function(index, file) {
-          $('<p/>').text(file.name).appendTo('#files');
-        });
-      },
-      progressall: function(e, data) {
-        var progress = parseInt(data.loaded / data.total * 100, 10);
-        $('#progress .bar').css(
-                'width',
-                progress + '%'
-                );
-      }
-    });
-  });
-</script>
+  var myCenter=new google.maps.LatLng(-33.878199,151.234898);
+function initialize()
+{
+        var mapProp = { 
+                center:myCenter,
+                zoom:12,
+                mapTypeId:google.maps.MapTypeId.ROADMAP 
+        };
+        // Array object
+        var map=new google.maps.Map(document.getElementById("map_canvas"),mapProp);
 
+        var marker=new google.maps.Marker({
+                        position:myCenter,
+                        });
+
+        marker.setMap(map);
+
+        
+
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+</script>
