Uploading and managing cars photo

--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing car</h1>
+<div class="container" style="padding-top: 80px;">
 
-<%= render 'form' %>
+  <h1>Editing car</h1>
 
-<%= link_to 'Show', [@car.user, @car] %> |
-<%= link_to 'Back', user_cars_path %>
+  <%= render 'form' %>
+
+  <%= link_to 'Show', [@car.user, @car] %> |
+  <%= link_to 'Back', user_cars_path %>
+</div>
