--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New car</h1>
+<div class="container" style="padding-top: 80px;">
 
-<%= render 'form' %>
+  <h1>New car</h1>
 
-<%= link_to 'Back', user_cars_path %>
+  <%= render 'form' %>
+
+  <%= link_to 'Back', user_cars_path %>
+</div>
