--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,28 +1,31 @@
-<h1>Listing cars</h1>
+<div class="container" style="padding-top: 80px;">
 
-<table>
-  <tr>
-    <th>User</th>
-    <th>License plate</th>
-    <th>Car description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <h1>Listing cars</h1>
 
-<% @cars.each do |car| %>
-  <tr>
-    <td><%= car.user.email %></td>
-    <td><%= car.license_plate %></td>
-    <td><%= car.car_description %></td>
-    <td><%= image_tag car.car_image.url(:thumb) %></td>
-    <td><%= link_to 'Show', [car.user, car] %></td>
-    <td><%= link_to 'Edit', edit_user_car_path(car.user,car) %></td>
-    <td><%= link_to 'Destroy', [car.user, car], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+  <table>
+    <tr>
+      <th>User</th>
+      <th>License plate</th>
+      <th>Car description</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
 
-<br />
+    <% @cars.each do |car| %>
+      <tr>
+        <td><%= car.user.email %></td>
+        <td><%= car.license_plate %></td>
+        <td><%= car.car_description %></td>
+        <td><%= image_tag car.car_image.url(:thumb) %></td>
+        <td><%= link_to 'Show', [car.user, car] %></td>
+        <td><%= link_to 'Edit', edit_user_car_path(car.user,car) %></td>
+        <td><%= link_to 'Destroy', [car.user, car], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </table>
 
-<%= link_to 'New Car', new_user_car_path %>
+  <br />
+
+  <%= link_to 'New Car', new_user_car_path %>
+</div>
