add some data for users views

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+    <div class="field">
+      <%= f.label :user %><br />
+      <%=  @user.email %>
+    </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
