--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,13 +2,17 @@
 
 <table>
   <tr>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>First name</th>
+    <th>Last Name</th>
+    <th>Email</th>
   </tr>
 
 <% @users.each do |user| %>
   <tr>
+    <td><%= user.firstname %></td>
+    <td><%= user.lastname %></td>
+    <td><%= user.email %></td>
+    <td><%= image_tag user.avatar(:thumb) %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
