--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 
 <!-- Carousel
     ================================================== -->
-<div id="myCarousel" class="carousel slide">
+<div id="myCarousel" class="carousel slide carousel-fade">
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/examples/slide-02.jpg" alt="">
+      <img src="img/examples/slide-01.jpg" alt="">
       <div class="container">
         <div class="carousel-caption">
           <h1>Example headline.</h1>
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="img/examples/slide-02.jpg" alt="">
+      <img src="img/examples/slide-03.jpg" alt="">
       <div class="container">
         <div class="carousel-caption">
           <h1>One more for good measure.</h1>
