ignoring tmp folders

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,13 @@
  *= require_tree .
  */
 
+#footer {
+    background-color: #333333;
+    color: black;
+}
+#footer a:link{
+    color: white;
+}    
+#footer.container {
+    padding-bottom: 0px;
+}
