--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,50 @@
     <meta name="author" content="">
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
-    <%= javascript_include_tag "holder" %>
     <%= csrf_meta_tags %>
 
   </head>
   <body>
     <%= render "/layouts/navigation" %>
-    <%= yield %>
-    <%= render "/layouts/footer" %>
 
+    <div class="container" style="padding-top: 80px;">
+      <% unless flash.empty? %>
+        <% flash.each do |name, msg| %>
+          <%= content_tag :div, :class => "alert alert-#{name}", :data => {:alert => nil},:id => "flash_#{name}" do%>
+            <button type="button" class="close" data-dismiss="alert-#{name}">&times;</button>
+            <%= msg %>
+          <% end %>
+        <% end %>
+      <% end %>
+
+      <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+          <% @user.errors.full_messages.each do |msg| %>
+            <div class="alert alert-error">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <%= msg %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+
+      <% if user_signed_in? %>
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="/udashboard"><i class="icon-screenshot"></i>General</a></li>
+          <li><a href="/users/edit"><i class="icon-user"></i>Personal</a></li>
+          <li><a href=" "><i class="icon-road"></i>Cars</a></li>
+          <li></li>
+          <li><a href="/cars/show"><i class="icon-briefcase"></i>Payment</a></li>
+          <li><a href="/cars/show"><i class="icon-time"></i>History</a></li>
+          <li><a href="/cars/show"><i class="icon-road"></i>Cars</a></li>
+          <li><a href="/cars/show"><i class="icon-envelope"></i>messages</a></li>
+        </ul>
+      <%end%>
+    </div>
+
+    <%= yield %>
+
+    <%= render "/layouts/footer" %>
   </body>
 </html>
