--- a/app/views/users/shared/_links.erb
+++ b/app/views/users/shared/_links.erb
@@ -1,4 +1,4 @@
-<%- if controller_name != 'sessions' %>
+<% if !user_signed_in? %>
   <%= link_to "Sign in", new_session_path(resource_name) %><br />
 <% end -%>
 
