--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="padding-top: 80px;">
+<div class="container" style="padding-bottom: 34px;">
 
   <h1>Editing car</h1>
 
