fixing dashboard links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,10 +46,9 @@
               Cars
             <%end%>
           </li>
-          <li><a href="/cars/show"><i class="icon-briefcase"></i>Payment</a></li>
-          <li><a href="/cars/show"><i class="icon-time"></i>History</a></li>
-          <li><a href="/cars/show"><i class="icon-road"></i>Cars</a></li>
-          <li><a href="/cars/show"><i class="icon-envelope"></i>messages</a></li>
+          <li><a href="#"><i class="icon-briefcase"></i>Payment</a></li>
+          <li><a href="#"><i class="icon-time"></i>History</a></li>
+          <li><a href="#"><i class="icon-envelope"></i>messages</a></li>
         </ul>
       <%end%>
     </div>
