moved creditor to route root added /api/v1/cities/get_rates.jso returning nested json with cities->areas->rates

--- a/app/views/areas/_form.html.erb
+++ b/app/views/areas/_form.html.erb
@@ -20,8 +20,8 @@
     <%= @area.city.name %>
   </div>
   <div class="field">
-    <%= f.label :creditor %><br />
-    <%= f.text_field :creditor %>
+    <%= f.label :creditor_id %><br />
+    <%= f.text_field :creditor_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
