--- a/app/views/creditors/edit.html.erb
+++ b/app/views/creditors/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [@creditor.area.city, @creditor.area, @creditor] %> |
-<%= link_to 'Back', city_area_creditors_path %>
+<%= link_to 'Show', @creditor %> |
+<%= link_to 'Back', creditors_path %>
