--- a/app/views/creditors/show.html.erb
+++ b/app/views/creditors/show.html.erb
@@ -41,5 +41,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_city_area_creditor_path(@creditor.area.city,@creditor.area,@creditor) %> |
-<%= link_to 'Back', city_area_creditors_path %>
+<%= link_to 'Edit', edit_creditor_path(@creditor) %> |
+<%= link_to 'Back', creditors_path %>
