--- a/app/views/rates/index.html.erb
+++ b/app/views/rates/index.html.erb
@@ -5,6 +5,7 @@
     <th>Rate</th>
     <th>Currency</th>
     <th>Area</th>
+    <th>Day A Week</th>
     <th>Start time</th>
     <th>End time</th>
     <th></th>
@@ -17,6 +18,7 @@
     <td><%= rate.rate %></td>
     <td><%= rate.currency %></td>
     <td><%= rate.area.name %></td>
+    <td><%= rate.day_a_week %></td>
     <td><%= rate.start_time %></td>
     <td><%= rate.end_time %></td>
     <td><%= link_to 'Show', [rate.area.city, rate.area, rate] %></td>
