--- a/app/views/rates/show.html.erb
+++ b/app/views/rates/show.html.erb
@@ -22,12 +22,12 @@
 
 <p>
   <b>Start time:</b>
-  <%= @rate.start_time %>
+  <%= l @rate.start_time, :format =>  "%H:%M" %>
 </p>
 
 <p>
   <b>End time:</b>
-  <%= @rate.end_time %>
+  <%= l @rate.end_time , :format =>  "%H:%M" %>
 </p>
 
 
