changes rate day_a_week to start_day_a_week, end_day_a_week

--- a/app/views/rates/_form.html.erb
+++ b/app/views/rates/_form.html.erb
@@ -24,8 +24,12 @@
     <%= @rate.area.name %>
   </div>
     <div class="field">
-      <%= f.label :day_a_week %> Sunday 0, Monday 1<br />
-      <%= f.text_field :day_a_week %>
+      <%= f.label :start_day_a_week %> Sunday 0, Monday 1<br />
+      <%= f.text_field :start_day_a_week %>
+    </div>
+    <div class="field">
+      <%= f.label :end_day_a_week %> Sunday 0, Monday 1<br />
+      <%= f.text_field :end_day_a_week %>
     </div>
   <div class="field">
     <%= f.label :start_time %><br />
