--- a/app/views/rates/show.html.erb
+++ b/app/views/rates/show.html.erb
@@ -16,8 +16,13 @@
 </p>
 
 <p>
-  <b>Day A Week:</b>
-  <%= @rate.day_a_week %>
+  <b>Start Day A Week:</b>
+  <%= @rate.start_day_a_week %>
+</p>
+
+<p>
+  <b>End Day A Week:</b>
+  <%= @rate.end_day_a_week %>
 </p>
 
 <p>
