--- a/app/views/rates/index.html.erb
+++ b/app/views/rates/index.html.erb
@@ -5,7 +5,8 @@
     <th>Rate</th>
     <th>Currency</th>
     <th>Area</th>
-    <th>Day A Week</th>
+    <th>Start Day A Week</th>
+    <th>End  Day A Week</th>
     <th>Start time</th>
     <th>End time</th>
     <th></th>
@@ -18,7 +19,8 @@
     <td><%= rate.rate %></td>
     <td><%= rate.currency %></td>
     <td><%= rate.area.name %></td>
-    <td><%= rate.day_a_week %></td>
+    <td><%= rate.start_day_a_week %></td>
+    <td><%= rate.end_day_a_week %></td>
     <td><%= l rate.start_time, :format =>  "%H:%M" %></td>
     <td><%= l rate.end_time, :format =>  "%H:%M" %></td>
     <td><%= link_to 'Show', [rate.area.city, rate.area, rate] %></td>
