--- a/app/views/streets/_form.html.erb
+++ b/app/views/streets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@street) do |f| %>
+<%= form_for([@street.area.city, @street.area, @street]) do |f| %>
   <% if @street.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@street.errors.count, "error") %> prohibited this street from being saved:</h2>
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :area %><br />
-    <%= f.text_field :area %>
+    <%= f.label @street.area.name %>
   </div>
   <div class="actions">
     <%= f.submit %>
