--- a/app/views/streets/index.html.erb
+++ b/app/views/streets/index.html.erb
@@ -12,14 +12,14 @@
 <% @streets.each do |street| %>
   <tr>
     <td><%= street.name %></td>
-    <td><%= street.area %></td>
-    <td><%= link_to 'Show', street %></td>
-    <td><%= link_to 'Edit', edit_street_path(street) %></td>
-    <td><%= link_to 'Destroy', street, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= street.area.name %></td>
+    <td><%= link_to 'Show', [street.area.city,street.area,street] %></td>
+    <td><%= link_to 'Edit', edit_city_area_street_path(street.area.city,street.area,street) %></td>
+    <td><%= link_to 'Destroy', [street.area.city,street.area,street], method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Street', new_street_path %>
+<%= link_to 'New Street', new_city_area_street_path %>
